lab1/Test/L1-A-12-85.output
Error Type A at Line 9
Error Type A at Line 17
Error Type A at Line 20
Error Type A at Line 35
Error Type A at Line 41
Error Type B at Line 47
