lab1/Test/L1-A-12-85.cmm
struct {
  int aCG , IUdHyoLCPw3uXM = t3_ZIhtTrT = RDS9K72MWt 
    + zjnC8xqp_BShJTq9rLS / ( l21qQ6aKw6_B9KeFSyUe || 
    nx && AQvYzLU9 == o9wiRZOPasE3ul [ D0 > v - l3MCX 
    ( T , cexHFuEiElE || _gatsB < KvkqN4O0dH9_z0XPLG - 
    ! qH [ M0 = lllVCRBkKYKKvh && J != NiouvMg / ( EUeO 
    && mcn2VWYo <= KY2HUIok2tqw6mMtl >= Bj5ALq ) ] * - 
    2104067177 / 707521515.1837803199 * - ufKR2t0zB_kSZy 
    \) ] * ! - rAv8p5oaVP54oTLh ( ) . HV9TOBG4gGu ) ;
}CHE [ 1498514828 ] , IgPxqfgnBKnFefxY5a 

;
struct {
  int YRV5mcGO ;
  struct zgfaiQf {
    int MFrFMM ;
  }XNZS ~;
}cNcruGu3BXIN ( struct T12vg3RGv AC4 ) {
  int i4vvVrbHizW1TE ;
'}
float ;
int ZgGeP7GFLP36jTeU ( ) {
  return EZ ;
}
int eEgbgoThB1G ( ) {
  if ( LflDVdZ9SMRY7Y )   while ( Ec8qnls )   DVcJJ9ioAu0Ti9ju 
    ;

else   n ;

}
int ss0MqAOyGMn ( int Afyva , int B8DfKCbGp1sfLEacWj 
  ) {
  if ( JY ) {
$  }
}
int ;
int gOMW4Jf ( ) {
}
int B70 ( ) {
~}
int xgy5LEN ( ) {
}
int k56Jl8y7YnxhuWskmo8 ( ) {
  gl9hTXNn0OaaJZggo ;
  VdFtp44 ;
  if SLgqf8GR )   e3XeLV81uPpEUaWLfO ;
else   if ( goV )   sM4NhUcXypnX ;


  while ( yaoo3wAFz5r )   buH4OLMqzNpHq6Z4Z ;

  KR2BRQW0 ;
}
